<?xml version="1.0"?>
<package format="2">
  <name>laser_odometry</name>
  <version>0.0.0</version>
  <description>
    Node package of the laser_odometry project.
    It contains the ROS node that instantiate the
    laser scan matcher plugin.
    It also defines and centralizes some of the common
    steps to aggregate a consecutive laser scan displacement
    estimates to a proper odometry.
  </description>

  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>
  <depend>laser_odometry_core</depend>
  <depend>topic_tools</depend>

  <test_depend>roslib</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <!-- -->
  </export>
</package>
