<?xml version="1.0"?>
<package format="2">
  <name>laser_odometry</name>
  <version>0.0.2</version>
  <description>
    The Laser Odometry metapackage
  </description>

  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>laser_odometry_node</exec_depend>
  <exec_depend>laser_odometry_core</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>