<?xml version="1.0"?>
<package format="2">
  <name>laser_odometry</name>
  <version>0.1.0</version>
  <description>
    The Laser Odometry metapackage
  </description>

  <author email="deray.jeremie@gmail.com">Jeremie Deray</author>
  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>laser_odometry_node</exec_depend>
  <exec_depend>laser_odometry_core</exec_depend>
  <exec_depend>laser_odometry_benchmark</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
