<?xml version="1.0"?>
<package format="2">
  <name>laser_odometry_core</name>
  <version>0.0.0</version>
  <description>The laser_odometry_core package</description>

  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>

  <test_depend>roslib</test_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
