<?xml version="1.0"?>
<package format="2">
  <name>laser_odometry_core</name>
  <version>0.0.0</version>
  <description>
    Core library for the laser_odometry package.
    It contains the base class from which laser scan matcher wrappers
    should inherit from.
  </description>

  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>

  <!--<test_depend>roslib</test_depend>-->
  <!--<test_depend>rostest</test_depend>-->

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
